# chitra

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  pr-security-review.yml  publish.yml
adapter_prototype/: __init__.py  goal_loop.py
docs/: DESIGN.md  ROADMAP.md  SOL-ADVERSARIAL-REVIEW.md  codex-artifact-equivalent.md  evasion-taxonomy.md  pause-recovery.md  petra-authority.md  policy.yaml.example  review.md  routing-feedback-usage.md  routing.yaml.example  self-tuning.md  workflow-pattern-catalog.md
internal/: README.md  SOL-ADVERSARIAL-REVIEW.md  kai-observer.md  license-history.md  publishing-research-readout.md
packaging/systemd/: chitra-dispatchd.service.example  chitra-ownership-provider.service.example  chitra-petra.service.example  chitra-rate-limit-guard.service.example  chitra-rate-limit-guard.timer.example  chitra-triaged.service.example
src/chitra/: __init__.py  _fsio.py  account_registry.py  artifacts.py  board.py  board_updater.py  capabilities.py  capabilities.yaml  close_gate.py  completion_gate.py  convlog.py  dispatch.py  dispatchd.py  draft_scanner.py  goal_enforcement.py  goals.py  goals_cli.py  lane_activity.py  lane_read.py  ledger.py  lexicon.py  load_shed.py  merge_queue.py  orders.py  outcomes.py  ownership.py  ownership_provider.py  petra.py  policy_config.py  pr_review.py  pr_reviewd.py  principles.index.json  principles.lock.json  principles.py  principles.source.yaml  rate_limit_guard.py  rate_limit_state.py  reasoned_dispatch.py  reasoning.py  recovery.py  (+9 more)
src/chitra/templates/: board.html
tests/: test_account_registry.py  test_adapter_goal_loop.py  test_artifacts.py  test_board.py  test_board_updater.py  test_capabilities.py  test_close_gate.py  test_compile_principles.py  test_completion_gate.py  test_convlog.py  test_dispatch.py  test_dispatchd.py  test_draft_scanner.py  test_goal_enforcement.py  test_goals.py  test_lane_read.py  test_ledger.py  test_load_shed.py  test_merge_queue.py  test_outcomes.py  test_ownership.py  test_ownership_provider.py  test_petra.py  test_policy_config.py  test_pr_review.py  test_pr_reviewd.py  test_principles.py  test_rate_limit_guard.py  test_rate_limit_state.py  test_reasoned_dispatch.py  test_reasoning.py  test_replay_eval.py  test_roster.py  test_routing_config.py  test_routing_feedback_usage.py  test_sweepd.py  test_triaged.py  test_triaged_receiving.py  test_usage.py  test_watchd.py
tests/fixtures/replay/: completion_cases.jsonl  voice_cases.jsonl
tools/: __init__.py  compile_principles.py
tools/routing_feedback/: __init__.py  routing_feedback_usage.py
