[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitra"
version = "0.6.0"
description = "Deterministic tmux relay/dedup daemons for AI-agent fleet monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Trey Herr" },
]
dependencies = [
    "structlog>=24.0.0",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9.1",
    "pytest-cov>=6",
    "ruff>=0.15,<0.16",
    "mypy>=1.14,<2",
    "types-PyYAML>=6,<7",
]

[project.scripts]
dispatchd = "chitra.dispatchd:main"
triaged = "chitra.triaged:main"
draft-scanner = "chitra.draft_scanner:main"
chitra-board = "chitra.board:main"
chitra-goals = "chitra.goals:main"
chitra-artifacts = "chitra.artifacts:main"
chitra-usage = "chitra.usage:main"
chitra-convo = "chitra.convlog:main"
chitra-capabilities = "chitra.capabilities:main"
chitra-queue = "chitra.merge_queue:main"

[project.urls]
Repository = "https://github.com/first-polyphony/chitra"
Issues = "https://github.com/first-polyphony/chitra/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chitra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
