[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitra"
version = "0.8.2.6"
description = "Deterministic tmux relay/dedup daemons for AI-agent fleet monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Trey Herr" },
]
dependencies = [
    "structlog>=26.1.0",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1,<9.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21,<0.16",
    "mypy>=2.2.0,<3",
    "types-PyYAML>=6.0.12.20260518,<7",
]

[project.scripts]
dispatchd = "chitra.dispatchd:main"
triaged = "chitra.triaged:main"
draft-scanner = "chitra.draft_scanner:main"
chitra-goals = "chitra.goals_cli:main"
chitra-artifacts = "chitra.artifacts:main"
chitra-usage = "chitra.usage:main"
chitra-rate-limit-guard = "chitra.rate_limit_guard:main"
chitra-ownership = "chitra.ownership:main"
chitra-sweepd = "chitra.sweepd:main"
chitra-convo = "chitra.convlog:main"
chitra-capabilities = "chitra.capabilities:main"

[project.urls]
Repository = "https://github.com/first-polyphony/chitra"
Issues = "https://github.com/first-polyphony/chitra/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chitra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
