[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitra-monitor"
version = "0.8.2.7"
description = "Deterministic tmux relay/dedup daemons for AI-agent fleet monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Trey Herr" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "structlog>=26.1.0,<27",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1,<9.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21,<0.16",
    "mypy>=2.2.0,<3",
    "types-PyYAML>=6.0.12.20260518,<7",
]

[project.scripts]
dispatchd = "chitra.dispatchd:main"
triaged = "chitra.triaged:main"
draft-scanner = "chitra.draft_scanner:main"
chitra-goals = "chitra.goals_cli:main"
chitra-artifacts = "chitra.artifacts:main"
chitra-usage = "chitra.usage:main"
chitra-rate-limit-guard = "chitra.rate_limit_guard:main"
chitra-ownership = "chitra.ownership:main"
chitra-sweepd = "chitra.sweepd:main"
chitra-convo = "chitra.convlog:main"
chitra-capabilities = "chitra.capabilities:main"

[project.urls]
Homepage = "https://github.com/ReticleWorks/chitra"
Repository = "https://github.com/ReticleWorks/chitra"
Issues = "https://github.com/ReticleWorks/chitra/issues"
Changelog = "https://github.com/ReticleWorks/chitra/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/chitra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
